<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_share_report"
        android:title="@string/action_share_report"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_share_image"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/action_share_image"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_facts_temperature"
        android:title="@string/action_facts_temperature"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/action_instructions"
        android:title="@string/action_instructions"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="6"
        app:showAsAction="never" />
</menu>
