<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ff202020"
    android:id="@+id/layout">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <com.example.erik.thermometer.ThermometerView
                android:layout_width="182dp"
                android:layout_height="fill_parent"
                android:id="@+id/Thermoview" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:gravity="end">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="end"
                    android:layout_gravity="right">

                    <com.example.erik.thermometer.TemperatureView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/Tempview"
                        android:padding="20dp"
                        android:paddingLeft="100dp" />
                    </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="end"
                    android:paddingBottom="25dp"
                    android:paddingTop="25dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/pressure"
                            android:id="@+id/pressureText"
                            android:textColor="#ffffffff" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/prValue"
                            android:id="@+id/pressureValue"
                            android:textColor="#ffffffff" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:paddingBottom="25dp"
                    android:paddingTop="25dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/humidity"
                            android:id="@+id/humidityText"
                            android:textColor="#ffffffff" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/humValue"
                            android:id="@+id/humidityValue"
                            android:textColor="#ffffffff" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/scale"
                            android:id="@+id/scaleText"
                            android:textColor="#ffffffff" />

                        <RadioGroup
                            android:layout_width="60dp"
                            android:layout_height="fill_parent"
                            android:orientation="vertical">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/celsius"
                                android:id="@+id/radCelsius"
                                android:checked="true"
                                android:textColor="#ffffffff" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fahrenheit"
                                android:id="@+id/radFahrenheit"
                                android:textColor="#ffffffff" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kelvin"
                                android:id="@+id/radKelvin"
                                android:textColor="#ffffffff" />
                        </RadioGroup>
                    </LinearLayout>

                </TableRow>
            </TableLayout>
        </TableRow>

    </FrameLayout>

</RelativeLayout>
